syntax = "proto3";

package onight.zjfae.afront.gens;
option java_package="onight.zjfae.afront.gensazj";
option java_outer_classname="FundAccountLogPB";
//Generated By BrewRobot:Wed Dec 06 17:14:04 CST 2017

message PBIFE_fund_queryFundAccountLog{
	///ife/fund/queryFundAccountLog.html
	message FundAccountLogList{
		string bizNo = 1;	 //,交易序列,String,不校验,是,
		string gmtCreate = 2;	 //,交易创建时间,String,不校验,是,
		string transCode = 3;	 //,交易码,String,不校验,是,
		string subTransCode = 4;	 //,子交易码,String,不校验,是,
		string subTransCodeName = 5;	 //,子交易码中文名,String,不校验,是,
		string transAmount = 6;	 //,交易金额,String,不校验,是,
		string postAmount = 7;	 //,交易后余额,String,不校验,是,
		string memo = 8;	 //,备注,String,不校验,是,
		string transType = 9;	 //, 交易类型00-收入;01-支出 不校验,是,
		string targetFundAccount = 10;	 //,转账类交易，目标资金账户 不校验,是,
	}

	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}


	PageInfo pageInfo = 1; //,流水信息,List,不校验,是,

	repeated FundAccountLogList fundAccountLogList = 2;


}

message Ret_PBIFE_fund_queryFundAccountLog{
	///ife/fund/queryFundAccountLog.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_fund_queryFundAccountLog data=3;


}

message REQ_PBIFE_fund_queryFundAccountLog{
	///ife/fund/queryFundAccountLog.html

	string pageIndex = 1; //,当前页,String,不校验,是,

	string pageSize = 2; //,页大小,String,不校验,是,

	string startDate = 3; //,开始日期,String,不校验,是,格式:yyyy-MM-dd

	string endDate = 4; //,结束日期,String,不校验,是,格式:yyyy-MM-dd

	string quanDetailsId = 5; //,卡劵编号,String,不校验,是,


}