syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_prdquery_queryUnifyPurchaseTradeList{
	///ife/prdquery/queryUnifyPurchaseTradeList.html
	message MyTradeObject{
        string id = 1;//  ,成交表PK,String,不校验,是,
        string productCode = 2;//  ,产品代码,String,不校验,是,
        string productName = 3;//  ,产品名称,String,不校验,是,
        string companyName = 4;//  ,管理公司名称,String,不校验,是,
        string cashAccount = 5;//  ,资金帐号,String,不校验,是,
        string tradeDate = 6; //,交易时间,String,不校验,是,
        string tradeAmount = 7; //,交易金额,String,不校验,是,
        string tradeType = 8;//  ,成交类型,String,不校验,是,
        string saleStatus = 9;//  ,成交状态,String,不校验,是,
        string saleStatusName = 10;//  ,成交状态中文显示,String,不校验,是,
        string deliveryNum = 11;//  ,成交单位,String,不校验,是,
        string cancelStatus = 12;//  ,撤单标志,String,不校验,是,
        string saleType = 13;//  ,买卖类型,String,不校验,是,
        string extraCost = 14;//  ,手续费,String,不校验,是,
        string channelNo = 15;//  ,终端编号,String,不校验,是,
        string createDate = 16;//  ,创建时间,String,不校验,是,
        string modifyDate = 17;//  ,更新时间,String,不校验,是,
        string specialFlag = 18;//  ,特约标志,String,不校验,是,
        string kqCode = 19;//  ,卡券Code,String,不校验,是,
        string kqType = 20;//  ,卡券类型,String,不校验,是,
        string kqValue = 21;//  ,卡券值,String,不校验,是,
        string kqAddRateBj = 22;//  ,卡券加息本金,String,不校验,是,
        string kqRateHikeDays = 23;//  ,卡券加息天数,String,不校验,是,
        string expectedMaxAnnualRate = 24;//  ,预期成交利率,String,不校验,是,
        string targetRate = 25;//  ,目标利率,String,不校验,是,
        string actualRate = 26;//  ,实际利率,String,不校验,是,
        string brokerNo = 27;//  ,渠道编号,String,不校验,是,
        string startTime = 28;//  ,开始时间,String,不校验,是,
        string endTime = 29;//  ,结束时间,String,不校验,是,
        string productCancel = 30;//  ,产品购买期是否允许撤单，0 否  1是,String,不校验,是,
        string cancelFlag = 31;//  ,页面判断是否可以撤销标志 0 否 1 是,String,不校验,是,
        string dataFlag = 32;//  ,数据列表状态 0-认购 1-成交,String,不校验,是,
        string buyStartDate = 33;//  ,募集开始时间,String,不校验,是,
        string delegationCode = 34;//  ,认购编号,String,不校验,是,
        string spvFlag = 35;//  ,是否spv 0-否 1-是,String,不校验,是,
         string delegateNum = 36;	 //,委托金额 ,String,不校验,是
         string deliveryCode = 37;	 //,成交编号 ,String,不校验,是
         string unitId = 38;	 //,持仓Id ,String,不校验,是
         string unitSource = 39;	 //,持仓来源 ,String,不校验,是
         string spvFundAccountList = 40;	 //,spv列表 ,String,不校验,是
         string cancelCountdown = 41;	 //,撤单倒计时（单位：秒） ,String,不校验,是
	}

	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}


	PageInfo pageInfo = 1; //,成交列表,List,不校验,是,

	repeated MyTradeObject myTradeObjects = 2;


}

message Ret_PBIFE_prdquery_queryUnifyPurchaseTradeList{
	///ife/prdquery/queryUnifyPurchaseTradeList.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdquery_queryUnifyPurchaseTradeList data=3;


}

message REQ_PBIFE_prdquery_queryUnifyPurchaseTradeList{
	///ife/prdquery/queryUnifyPurchaseTradeList.html

	string pageIndex = 1; //,当前页,String,不校验,否,

	string pageSize = 2; //,页大小,String,不校验,否,

	string startDate = 3; //,开始日,String,不校验,是,

	string endDate = 4; //,结束日,String,不校验,是,

	string productCodeOrName = 5; //,产品编号/产品名称,String,不校验,是,


}